--- a/assets/style.css
+++ b/assets/style.css
@@ -15,21 +15,26 @@
     line-height: 1.5;
   }
 
+  p {
+    font-size: large;
+  }
+
  /*style navigation element*/ 
   header {
     background-color: var(--accent);
     height: 100px;
   }
   
-  ul {
+  nav ul {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     list-style-type: none;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: x-large;
   }
 
-  ul a {
+  nav ul a {
     display: flex;
     color: white;
     text-decoration: none;
@@ -87,14 +92,14 @@ h1 + p {
 
 /*style my work grid*/ 
 
-h2 {
-  padding-top: 50px;
-  text-align: center;
+#work h2 {
+  padding-top : 40px;
+  padding-left: 40px;
 }
 
 .page-section {
   display: grid;
-  margin-top: 100px;
+  margin-top: 40px;
   min-height: 140vh;
   grid-template-columns: 58% 38%;
   grid-template-rows: 1fr 1fr 1fr;
@@ -136,23 +141,42 @@ h2 {
   grid-area: example-four;
   background-image: url("../assets/images/IMG_5294.JPG");
 }
-  
 
+/*contact section styling*/  
+#contact h2 {
+  padding-top : 40px;
+  padding-left: 40px;
+}
 
+#contact ul {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: flex-start;
+  list-style-type: none;
+  font-style: normal;
+}
 
+#contact ul a {
+  text-decoration: none;
+  color: var(--main);
+}
 
+/*footer styling*/ 
 
-
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    margin: 0;
+  footer {
+    text-align: center;
+    padding: 20px;
+    background-color: var(--accent);
   }
   
-  p {
-    margin: 0;
+  button { 
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+    background-color: beige;
+    border: solid 2px var(--main);
+    border-radius: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-weight: bold;
   }
-  
